eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/FCUNote__c.object
<CustomObject>
    <description>For use by FCU only</description>
    <fields>
        <fullName>Date_for_follow_up__c</fullName>
        <label>Date for follow up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time__c</fullName>
        <label>Date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>FCUJob__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>N{0000}</displayFormat>
        <label>Note number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>